--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: write
+  releases: write
+  packages: write
+
 env:
   NODE_VERSION: 20
   PNPM_VERSION: 9
