--- a/server/.env.example
+++ b/server/.env.example
@@ -19,3 +19,14 @@ RATE_LIMIT_MAX=100
 # File Upload Configuration
 MAX_FILE_SIZE=10485760
 UPLOAD_DIR=uploads
+
+# OAuth Configuration
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=
+
+APPLE_CLIENT_ID=
+APPLE_TEAM_ID=
+APPLE_KEY_ID=
+APPLE_PRIVATE_KEY=
+APPLE_REDIRECT_URI=
