--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Workout application monorepo",
   "scripts": {
     "dev:server": "pnpm --filter server dev",
+    "dev:server-tunnel": "pnpm --filter server tunnel:3000",
     "dev:web": "pnpm --filter web dev",
     "dev": "concurrently \"pnpm dev:server\" \"pnpm dev:web\"",
     "build": "pnpm --filter server build && pnpm --filter web build",
