--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only --clear -r tsconfig-paths/register src/index.ts",
     "dev:debug": "ts-node-dev --inspect --respawn --transpile-only --clear -r tsconfig-paths/register src/index.ts",
+    "tunnel:3000": "ngrok http 3000",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
     "start:prod": "NODE_ENV=production node dist/index.js",
@@ -29,9 +30,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@sendgrid/mail": "^8.1.6",
+    "apple-signin-auth": "^2.0.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -54,6 +58,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
